# ctf-proxy

./: .gitignore  CLAUDE.md  README.md
examples/: attack_wrapper.py  kill_checker_processes.sh  pyproject.toml  run_checks.py  start-example-services.sh
examples/websocket-echo/: Dockerfile  Makefile  README.md  client.py  docker-compose.yml  server.py  websocket-parser.py
src/: .editorconfig  .gitignore  Dockerfile.logs-processor  Makefile  Makefile.dev  README.md  config.example.yml  docker-compose.template.yml  docker-compose.yml  envoy.yaml  postgres-init.sql  pyproject.toml  services.yml  start_post_processor.sh  test_db_extraction.py  uv.sh
src/analyzer-rules/: fingerprint.py
src/analyzer-rules/preview/: draft_admin_probe.py  is_admin.py
src/analyzer-rules/saarctf-2025/: baseline_http.py  baseline_tcp.py  generic_signatures.py
src/backend/: Dockerfile.logs-processor  Makefile  Makefile.dev  docker-compose.test.yml  pyproject.toml
src/backend/ctf_proxy/: __init__.py
src/backend/tests/: conftest.py  utils.py
src/ctf_proxy/: dashboard.py
src/ctf_proxy/analyzer/: __main__.py  api.py  db.py  main.py  preview.py  registry.py  rule.py  rules_store.py  runner.py  schema.sql  schemas.py  source.py
src/ctf_proxy/config/: __init__.py  config.py
src/ctf_proxy/dashboard/: __init__.py  app.py  main.py  models.py
src/ctf_proxy/db/: __init__.py  adapters.py  models.py  schema.sql  stats.py  utils.py
src/ctf_proxy/logs_processor/: __main__.py  batch.py  flags.py  http.py  sessions.py  tap.example.json  tap_processor.py  tcp.py
src/ctf_proxy/proxy/: __init__.py  envoy.template.yaml  envoy.yaml  iptables-config.sh
src/ctf_proxy/ui/: dashboard.py
src/envoy/: envoy.template.yaml
src/envoy/interceptor/: .dockerignore  Makefile  entrypoint.go  helpers.go  main.go  proto.go  types.go
src/exploiter/: common.py  example.py
src/frontend/: .cta.json  Dockerfile  biome.json  index.html  package-lock.json  vite.config.ts
src/frontend/public/: manifest.json
src/frontend/src/: main.tsx  routeTree.gen.ts  styles.css
src/interceptor/: .dockerignore  Dockerfile.build  Makefile  entrypoint_http.go  entrypoint_tcp.go  go.mod  go.sum  helpers.go  interceptor.go  interceptor_http.go  interceptor_tcp.go  main.go  types.go  utils.go
src/interceptor/test/: Dockerfile.build  Dockerfile.envoy  Dockerfile.test  Makefile  docker-compose.yml  envoy.yaml  nginx.conf  (+2 more)
src/tests/: conftest.py  utils.py
src/traefik/: dynamic.yml
src/ui/: biome.json  package-lock.json  package.json
(+216 files in other folders)
