[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dicttoxml>=1.7.16",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pdfplumber>=0.11.10",
    "pillow>=11.3.0",
    "pwntools>=4.14.1",
    "pycryptodome>=3.23.0",
    "pyjwt>=2.10.1",
    "pyzbar>=0.1.9",
    "qrcode>=8.2",
    "redis>=8.0.1",
    "requests>=2.32.5",
    "rich>=15.0.0",
    "selenium>=4.20.0",
    "timeout-decorator>=0.5.0",
    "websockets==12.0",
    "wonderwords>=2.2.0",
    "wsproto>=1.2.0",
    "xmltodict==1.0.0",
]
